--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,3 +24,9 @@ flutter:
         - asset: assets/fonts/Lato-Light.ttf
         - asset: assets/fonts/Lato-Bold.ttf
           weight: 700
+
+  assets:
+    - assets/images/shoes_1.png
+    - assets/images/shoes_2.png
+    - assets/images/shoes_3.png
+    - assets/images/shoes_4.png
